# Parameter-Free-Text-Classification-with-Gzip

./: Ecommerce Text Classification.ipynb  Medical Text Dataset -Cancer Doc Classification.ipynb  README.md  gzip_knn_classifier_slow.py
data/: Ecommerce Text Classification.csv
gzip_knn_classifier/: Cargo.toml
gzip_knn_classifier/src/: lib.rs
