[package]
name = "gzip_knn_classifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.20.2", features = ["extension-module"] }
flate2 = "1.0"
ordered-float = "1.0"
rayon = "1.8.0"
